...
    ]
    const index = categoryId.length % colors.length
    return colors[index]
  }

  return (
    <Box className="flex-1 bg-gray-50" testID="day-sheet">
      <KeyboardAvoidingView
        behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
        className="flex-1"
        testID="day-sheet-keyboard-avoiding-view"
      >
        <ScrollView
...
